fix z-index

--- a/src/common/layout/style.css
+++ b/src/common/layout/style.css
@@ -5,6 +5,13 @@
   overflow: hidden;
 }
 
+.tooltipDescription{
+  width: 100%;
+  display: flex;
+  align-items: center;
+  flex-direction: column;
+}
+
 h4 {
   color: #fff;
   margin: 0;
@@ -15,13 +22,14 @@ h4 {
 
 .navigation {
   /* flex: 0 1 395px; */
-  box-shadow: 0px 0px 5px 0px gray;
-  position: fixed;
+  z-index: 20;
   left: -390px;
   width: 390px;
   height: 100%;
-  background-color: rgba(129, 129, 129, 0.158);
+  position: fixed;
   transition: left 0.3s ease-in-out;
+  box-shadow: 0px 0px 5px 0px gray;
+  background-color: rgba(129, 129, 129, 0.158);
 }
 
 .navigation.active {
