--- a/src/components/Projects/style.css
+++ b/src/components/Projects/style.css
@@ -44,12 +44,18 @@ a {
   padding: 8px;
   color: #000;
   display: flex;
+  cursor: pointer;
   margin-top: 15px;
   border-radius: 10px;
   align-items: center;
   flex-direction: column;
   justify-content: center;
+  transition: transform 200ms ease-in-out;
   box-shadow: 0px 0px 4px -2px rgb(26, 37, 41);
+}
+
+.card:hover {
+  transform: scale(0.95);
 }
 
 .card-link {
